@@ -56,6 +56,9 @@ List::MoreUtils           = 0.22
 ; SQLite.pm
 DBD::SQLite               = 1.29
 
+; Words.pm
+Regexp::Common            = 2010010201
+
 ; everywhere
 namespace::clean          = 0.13
 
